Fix the text overflow on the package tabs.

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1564,6 +1564,9 @@ iframe {
 
     width: 150px;
     height: 30px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .devel-page .dev-tabbar > a.active {
